# ClueSolver

./: CMakeLists.txt  README.md  boost_setup.md
include/: analyzer.h  game.h  guess.h  override.h  player.h  stats.h  utilities.h
include/cards/: card.h  deck.h  person.h  room.h  weapon.h
include/python/: py_analyzer.h  py_game.h  py_guess.h  py_player.h  py_stats.h  py_utilities.h
include/python/cards/: py_cards.h  py_deck.h
python_gui/: constants.py  controller.py  integercheck.py  main.py  resources.py  signal.py
python_gui/gui/: addguess.py  buttongrid.py  carddisplay.py  cluegui.py  cluemenu.py  combolabel.py  guesswidget.py  listchoice.py  namewidget.py  orderer.py  popupwindow.py  resources.py  skipwidget.py  styles.py  tristatebutton.py  tristatusbutton.py
python_gui/gui/addplayer/: addplayerwidget.py  askknowscards.py  askname.py  asknumcards.py
python_gui/gui/new/: askactiveplayer.py  askcards.py  asknames.py  asknumcards.py  asknumplayers.py  askorder.py  askplayer.py  askplayers.py  newgamewidget.py  newwidget.py
python_gui/gui/order/: editorderwidget.py
python_gui/gui/overrides/: askoverrides.py  editoverridewidget.py
python_gui/gui/removeplayer/: askwhichplayer.py  removeplayerwidget.py
src/: analyzer.cpp  game.cpp  guess.cpp  main.cpp  player.cpp  utilities.cpp
src/cards/: card.cpp  deck.cpp  person.cpp  room.cpp  weapon.cpp
src/python/: py_analyzer.cpp  py_game.cpp  py_guess.cpp  py_player.cpp  py_stats.cpp  py_utilities.cpp  python.cpp
src/python/cards/: py_cards.cpp  py_deck.cpp
test/: test.py
